[package]
name = "lost_compile"
version = "0.1.0"
authors = ["Prajwal S N <prajwalnadig21@gmail.com>"]
edition = "2021"

[lib]

[[bin]]
name = "lost"
path = "src/main.rs"

[dependencies]
"log" = "0.4.0"
"pretty_env_logger" = "0.4.0"
"once_cell" = "1.17.1"
"lost_syntax" = { path = "../lost_syntax" }
