[package]
name = "lost_playground"
version = "0.1.0"
authors = ["Prajwal S N <prajwalnadig21@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.100"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
lost_compile = { path = "../lost_compile" }
lost_syntax = { path = "../lost_syntax" }
